--- a/client/src/StyleSheet/SecondaryContent.css
+++ b/client/src/StyleSheet/SecondaryContent.css
@@ -1,6 +1,5 @@
-.secondaryContent {
+.SecondaryContent {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  margin-bottom: 2rem;
 }
